welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() { 
  var x = getMondeLargeur();
  motif();
  
  
  
  
}






def motif() {
  var y = getMondeHauteur()
var T:Array[Color](y)
  for (i<- 1 to (getMondeHauteur())) {
    getCouleurSol();
    avance()
  }
}